--- a/.gitignore
+++ b/.gitignore
@@ -102,4 +102,8 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-.idea/workspace.xml
+
+# intelliJ
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
